--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-# Configuração do Banco H2 (em memória para desenvolvimento)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Configuração do Banco Oracle usando variáveis de ambiente
+spring.datasource.url=${ORACLE_URL}
+spring.datasource.driverClassName=oracle.jdbc.OracleDriver
+spring.datasource.username=${ORACLE_USER}
+spring.datasource.password=${ORACLE_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
 # Porta do servidor
 server.port=8080
